--- a/static/demo/settings.toml
+++ b/static/demo/settings.toml
@@ -1,3 +1,8 @@
 img_dir = 'static/demo/imgs'
 tag_dir = 'static/demo/tags'
 tags = ['Car','Bicycle','Tree','Table','Building','Sign']
+
+[server]
+host = 'localhost'
+port = 5000
+debug = true
