--- a/static/demo/settings.toml
+++ b/static/demo/settings.toml
@@ -1,8 +1,9 @@
 img_dir = 'static/demo/imgs'
 tag_dir = 'static/demo/tags'
 tags = ['Car','Bicycle','Tree','Table','Building','Sign']
+multilabel = true
 
 [server]
 host = 'localhost'
 port = 5000
-threads = 4
+threads = 10
