Breaking: change settings
- "img_dir" and "tag_dir" in the settings are relative to the config file now.

--- a/static/demo/settings_sqlite.toml
+++ b/static/demo/settings_sqlite.toml
@@ -1,5 +1,5 @@
-img_dir = 'static/demo/imgs'
-tag_dir = 'static/demo/tags.sqlite3'
+img_dir = 'imgs'
+tag_dir = 'tags.sqlite3'
 tags = ['Car','Bicycle','Tree','Table','Building','Sign']
 multilabel = false
 
