--- a/static/demo/settings.toml
+++ b/static/demo/settings.toml
@@ -1,5 +1,5 @@
-img_dir = 'static/demo/imgs'
-tag_dir = 'static/demo/tags'
+img_dir = 'imgs'
+tag_dir = 'tags'
 tags = ['Car','Bicycle','Tree','Table','Building','Sign']
 multilabel = true
 
